force-app/main/default/objects/DataUsePurpose/fields/PMC_DH_NotificationVisible__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_NotificationVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Visible</label>
    <type>Checkbox</type>
</CustomField>