force-app/main/default/objects/DataUsePurpose/fields/PMC_DH_Sequence__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Sequence__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>